--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.+'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.code.gson:gson:2.3.1'}
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.android.support:palette-v7:22.2.0'
+}
