--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,17 +17,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:support-v4:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:palette-v7:22.2.0'
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile 'com.android.support:appcompat-v7:22.2.0'
+        compile 'com.android.support:support-v4:22.2.0'
+        compile 'com.android.support:cardview-v7:22.2.0'
+        compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+        compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+        compile 'com.jakewharton:butterknife:7.0.1'
+        compile 'com.squareup.picasso:picasso:2.5.2'
+        compile 'com.google.code.gson:gson:2.3.1'
+        compile 'com.android.support:palette-v7:22.2.0'
+        testCompile "org.mockito:mockito-core:2.+"
+        testCompile "junit:junit:4.12"
+    }
 }
