--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
 
     defaultConfig {
         applicationId "org.gbe.hugsward"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -19,17 +19,20 @@ android {
     }
 
     dependencies {
-        compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile 'com.android.support:appcompat-v7:22.2.0'
-        compile 'com.android.support:support-v4:22.2.0'
-        compile 'com.android.support:cardview-v7:22.2.0'
-        compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
-        compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
-        compile 'com.jakewharton:butterknife:7.0.1'
-        compile 'com.squareup.picasso:picasso:2.5.2'
-        compile 'com.google.code.gson:gson:2.3.1'
-        compile 'com.android.support:palette-v7:22.2.0'
-        testCompile "org.mockito:mockito-core:2.+"
-        testCompile "junit:junit:4.12"
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'com.android.support:appcompat-v7:27.0.2'
+        implementation 'com.android.support:support-v4:27.0.2'
+        implementation 'com.android.support:cardview-v7:27.0.2'
+        implementation 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+        implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+        implementation 'com.squareup.picasso:picasso:2.5.2'
+        implementation 'com.google.code.gson:gson:2.8.0'
+        implementation 'com.android.support:palette-v7:27.0.2'
+
+        implementation 'com.jakewharton:butterknife:8.8.1'
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+        testImplementation "org.mockito:mockito-core:2.13.0"
+        testImplementation "junit:junit:4.12"
     }
 }
